# notion-mcp-server

./: EXAMPLES.md  README.md  REMOTE_DEPLOYMENT.md  pyproject.toml  requirements.txt
notion_mcp/: __init__.py  server.py  server_http.py
